[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loadtest"
version = "0.1.0"
description = "Async HTTP load-testing CLI tool"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
]

[project.scripts]
loadtest = "loadtest.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "aiohttp[speedups]>=3.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
